// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot of allLanguages: allLanguages 1`] = `
[
  {
    "code": "en",
    "direction": "ltr",
    "label": "English",
    "shortLabel": "EN",
  },
  {
    "code": "ar",
    "direction": "rtl",
    "label": "العربية",
    "shortLabel": "ع",
  },
]
`;

exports[`should match snapshot when providing all fields: errors 1`] = `[]`;

exports[`should match snapshot when providing all fields: output 1`] = `
LanguageEntity {
  "code": "en",
  "direction": "ltr",
  "label": "English",
  "shortLabel": "EN",
}
`;

exports[`should match snapshot when providing required fields only: errors 1`] = `[]`;

exports[`should match snapshot when providing required fields only: output 1`] = `
LanguageEntity {
  "code": "en",
  "direction": "ltr",
  "label": "English",
  "shortLabel": "EN",
}
`;

exports[`should show an error that matches snapshot when passing empty object: errors 1`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "isIn": "code must be one of the following values: en, ar",
    },
    "property": "code",
    "target": LanguageEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": [],
    "constraints": {
      "isIn": "shortLabel must be one of the following values: EN, ع",
    },
    "property": "shortLabel",
    "target": LanguageEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": [],
    "constraints": {
      "isIn": "label must be one of the following values: English, العربية",
    },
    "property": "label",
    "target": LanguageEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": [],
    "constraints": {
      "isIn": "direction must be one of the following values: ltr, rtl",
    },
    "property": "direction",
    "target": LanguageEntity {},
    "value": undefined,
  },
]
`;

exports[`should show an error that matches snapshot when passing empty object: output 1`] = `LanguageEntity {}`;
